feat: 补充国际化

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -11,6 +11,10 @@
     "message": "Language Settings",
     "description": "Language"
   },
+  "Shortcut": {
+    "message": "Shortcut Settings",
+    "description": "Shortcut"
+  },
   "TabsGroupManagement": {
     "message": "Tabs Group Management",
     "description": "Tabs Group Management"
