feat: 标签清理组件

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -15,6 +15,10 @@
     "message": "Shortcut Settings",
     "description": "Shortcut"
   },
+  "TabsClean": {
+    "message": "TabsClean Settings",
+    "description": "TabsClean"
+  },
   "TabsGroupManagement": {
     "message": "Tabs Group Management",
     "description": "Tabs Group Management"
